# cliplingo

./: .gitignore  LICENSE  README.md  agents.md  pnpm-lock.yaml  task.md
.github/workflows/: desktop-ci.yml  desktop-release.yml
apps/desktop/: .prettierignore  eslint.config.js  package.json  pnpm-lock.yaml  tailwind.config.ts  vite.config.ts
apps/desktop/src/: App.vue  main.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json  settings.json  translation-popup.json
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/desktop/src-tauri/src/models/: config.rs
apps/desktop/src-tauri/src/services/: accessibility.rs  clipboard.rs  config.rs  history.rs  language.rs  logging.rs  mod.rs  translation.rs  trigger.rs
apps/desktop/src-tauri/src/services/provider/: mod.rs  openai_compatible.rs
apps/desktop/src-tauri/src/storage/: fs_paths.rs  secure_storage.rs
apps/desktop/src/components/: AppShell.vue
apps/desktop/src/components/settings/: AppSettingsWorkspace.vue  JsonCodeEditor.vue  ProviderOverviewPanel.vue  ProviderSettingsWorkspaceLegacy.vue  SectionTitle.vue  SettingsWorkspace.vue
apps/desktop/src/components/translation/: TranslateWorkspace.vue  TranslationPopup.vue  TranslationSourceCard.vue  TranslationTargetCard.vue  types.ts  useTranslationPopup.ts  useTranslationPopupViewModel.ts
apps/desktop/src/components/window-shells/: PopupWindowShell.vue  SettingsWindowShell.vue
apps/desktop/src/config/: providerDefaults.ts
apps/desktop/src/i18n/: index.ts
apps/desktop/src/plugins/: vuetify.ts
apps/desktop/src/router/: index.ts
apps/desktop/src/stores/: providers.ts  settings.ts  translation.ts  ui.ts
apps/desktop/src/styles/: theme.css
apps/desktop/src/types/: index.ts
apps/desktop/src/views/: HistoryView.vue  HomeView.vue  ProviderDetailView.vue  ProvidersView.vue  ProvidersViewLegacy.vue  SettingsView.vue
docs/: release-checklist.md
scripts/: package-macos.sh  package-windows.ps1  verify-release.sh
