[package]
name = "cliplingo-desktop"
version = "0.1.1"
description = "ClipLingo desktop application"
authors = ["Zhixiang Dai"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "cliplingo_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
async-trait = "0.1"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rdev = "0.5"
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-opener = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-global-shortcut = "2"
whatlang = "0.18"
directories = "6"
keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
url = "2"

[target.'cfg(target_os = "macos")'.dependencies]
block2 = "0.6.2"
core-foundation = "0.10"
core-graphics = "0.25"
objc2-app-kit = { version = "0.3.2", features = ["NSEvent"] }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
